// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination-items-per-page-legacy #render should render as expected (1) 1`] = `
<gux-pagination-items-per-page-legacy items-per-page="25">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 25 selected">
        <mock:shadow-root>
          <gux-popup>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate>
                      25
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <slot slot="popup"></slot>
          </gux-popup>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            25
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            50
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            75
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page-legacy>
`;

exports[`gux-pagination-items-per-page-legacy #render should render as expected (2) 1`] = `
<gux-pagination-items-per-page-legacy items-per-page="50">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 50 selected">
        <mock:shadow-root>
          <gux-popup>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate>
                      50
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <slot slot="popup"></slot>
          </gux-popup>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            25
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            50
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            75
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page-legacy>
`;

exports[`gux-pagination-items-per-page-legacy #render should render as expected (3) 1`] = `
<gux-pagination-items-per-page-legacy items-per-page="75">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 75 selected">
        <mock:shadow-root>
          <gux-popup>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate>
                      75
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <slot slot="popup"></slot>
          </gux-popup>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            25
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            50
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            75
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page-legacy>
`;

exports[`gux-pagination-items-per-page-legacy #render should render as expected (4) 1`] = `
<gux-pagination-items-per-page-legacy items-per-page="100">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 100 selected">
        <mock:shadow-root>
          <gux-popup>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate>
                      100
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <slot slot="popup"></slot>
          </gux-popup>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            25
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            50
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            75
          </gux-option>
          <gux-option aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-i" role="option">
            <mock:shadow-root>
              <div class="gux-option-wrapper">
                <gux-truncate>
                  <slot name="text"></slot>
                  <slot></slot>
                </gux-truncate>
                <slot name="subtext"></slot>
              </div>
            </mock:shadow-root>
            100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page-legacy>
`;
